cmake_minimum_required(VERSION 3.28)
project(Leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(Leetcode main.cpp)

add_executable(two_sum "Interview classic 150 questions/Hash table/two_sum.cpp")
add_executable(add_two_numbers "Interview classic 150 questions/Linked list/add_two_numbers.cpp")
add_executable(merge_sorted_array "Interview classic 150 questions/Arrar and string/merge_sorted_array.cpp")
add_executable(remove_element "Interview classic 150 questions/Arrar and string/remove_element.cpp")
add_executable(remove_duplicates_from_sorted_array "Interview classic 150 questions/Arrar and string/remove_duplicates_from_sorted_array.cpp")
add_executable(remove_duplicates_from_sorted_arrayII "Interview classic 150 questions/Arrar and string/remove_duplicates_from_sorted_arrayII.cpp")
add_executable(majority_element "Interview classic 150 questions/Arrar and string/majority_element.cpp")
add_executable(rotate_array "Interview classic 150 questions/Arrar and string/rotate_array.cpp")
add_executable(best_time_to_bay_and_sell_stock "Interview classic 150 questions/Arrar and string/best_time_to_bay_and_sell_stock.cpp")
add_executable(best_time_to_bay_and_sell_stock_II "Interview classic 150 questions/Arrar and string/best_time_to_bay_and_sell_stock_II.cpp")
add_executable(jump_game "Interview classic 150 questions/Arrar and string/jump_game.cpp")
add_executable(jump_game_II "Interview classic 150 questions/Arrar and string/jump_game_II.cpp")
add_executable(H-index "Interview classic 150 questions/Arrar and string/H-index.cpp")
add_executable(insert_delete_getRandom_O1 "Interview classic 150 questions/Arrar and string/insert_delete_getRandom_O1.cpp")
add_executable(product_of_array_except_self "Interview classic 150 questions/Arrar and string/product_of_array_except_self.cpp")