cmake_minimum_required(VERSION 3.28)
project(Leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(Leetcode main.cpp)

add_executable(two_sum "Interview classic 150 questions/Hash table/two_sum.cpp")
add_executable(add_two_numbers "Interview classic 150 questions/Linked list/add_two_numbers.cpp")
add_executable(merge_sorted_array "Interview classic 150 questions/Arrar and string/merge_sorted_array.cpp")
add_executable(remove_element "Interview classic 150 questions/Arrar and string/remove_element.cpp")
add_executable(remove_duplicates_from_sorted_array "Interview classic 150 questions/Arrar and string/remove_duplicates_from_sorted_array.cpp")
add_executable(remove_duplicates_from_sorted_arrayII "Interview classic 150 questions/Arrar and string/remove_duplicates_from_sorted_arrayII.cpp")
add_executable(majority_element "Interview classic 150 questions/Arrar and string/majority_element.cpp")
add_executable(rotate_array "Interview classic 150 questions/Arrar and string/rotate_array.cpp")
add_executable(best_time_to_bay_and_sell_stock "Interview classic 150 questions/Arrar and string/best_time_to_bay_and_sell_stock.cpp")
add_executable(best_time_to_bay_and_sell_stock_II "Interview classic 150 questions/Arrar and string/best_time_to_bay_and_sell_stock_II.cpp")
add_executable(jump_game "Interview classic 150 questions/Arrar and string/jump_game.cpp")
add_executable(jump_game_II "Interview classic 150 questions/Arrar and string/jump_game_II.cpp")
add_executable(H-index "Interview classic 150 questions/Arrar and string/H-index.cpp")
add_executable(insert_delete_getRandom_O1 "Interview classic 150 questions/Arrar and string/insert_delete_getRandom_O1.cpp")
add_executable(product_of_array_except_self "Interview classic 150 questions/Arrar and string/product_of_array_except_self.cpp")
add_executable(gas_station "Interview classic 150 questions/Arrar and string/gas_station.cpp")
add_executable(candy "Interview classic 150 questions/Arrar and string/candy.cpp")
add_executable(trapping_rain_water "Interview classic 150 questions/Arrar and string/trapping_rain_water.cpp")
add_executable(roman_to_integer "Interview classic 150 questions/Arrar and string/roman_to_integer.cpp")
add_executable(integer_to_roman "Interview classic 150 questions/Arrar and string/integer_to_roman.cpp")
add_executable(length_of_last_word "Interview classic 150 questions/Arrar and string/length_of_last_word.cpp")
add_executable(longest_common_prefix "Interview classic 150 questions/Arrar and string/longest_common_prefix.cpp")
add_executable(reverse_words_in_a_string "Interview classic 150 questions/Arrar and string/reverse_words_in_a_string.cpp")
add_executable(Zigzag_conversion "Interview classic 150 questions/Arrar and string/Zigzag_conversion.cpp")
add_executable(find_the_index_of_the_first_occurrence_in_a_string "Interview classic 150 questions/Arrar and string/find_the_index_of_the_first_occurrence_in_a_string.cpp")
add_executable(valid_palindrome "Interview classic 150 questions/double pointer/valid_palindrome.cpp")
add_executable(is_subsequence "Interview classic 150 questions/double pointer/is_subsequence.cpp")
add_executable(two_sum_II_input_array_is_sorted "Interview classic 150 questions/double pointer/two_sum_II_input_array_is_sorted.cpp")
add_executable(container_with_most_water "Interview classic 150 questions/double pointer/container_with_most_water.cpp")
add_executable(3sum "Interview classic 150 questions/double pointer/3sum.cpp")
add_executable(minimum_size_subarray_sum "Interview classic 150 questions/sliding window/minimum_size_subarray_sum.cpp")