cmake_minimum_required(VERSION 3.28)
project(Leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(Leetcode main.cpp)

add_executable(two_sum "Interview classic 150 questions/Hash table/two_sum.cpp")
add_executable(add_two_numbers "Interview classic 150 questions/Linked list/add_two_numbers.cpp")
add_executable(merge_sorted_array "Interview classic 150 questions/Arrar and string/merge_sorted_array.cpp")
add_executable(remove_element "Interview classic 150 questions/Arrar and string/remove_element.cpp")
add_executable(remove_duplicates_from_sorted_array "Interview classic 150 questions/Arrar and string/remove_duplicates_from_sorted_array.cpp")
add_executable(remove_duplicates_from_sorted_arrayII "Interview classic 150 questions/Arrar and string/remove_duplicates_from_sorted_arrayII.cpp")
add_executable(majority_element "Interview classic 150 questions/Arrar and string/majority_element.cpp")
add_executable(rotate_array "Interview classic 150 questions/Arrar and string/rotate_array.cpp")
add_executable(best_time_to_bay_and_sell_stock "Interview classic 150 questions/Arrar and string/best_time_to_bay_and_sell_stock.cpp")
add_executable(best_time_to_bay_and_sell_stock_II "Interview classic 150 questions/Arrar and string/best_time_to_bay_and_sell_stock_II.cpp")
add_executable(jump_game "Interview classic 150 questions/Arrar and string/jump_game.cpp")
add_executable(jump_game_II "Interview classic 150 questions/Arrar and string/jump_game_II.cpp")
add_executable(H-index "Interview classic 150 questions/Arrar and string/H-index.cpp")
add_executable(insert_delete_getRandom_O1 "Interview classic 150 questions/Arrar and string/insert_delete_getRandom_O1.cpp")
add_executable(product_of_array_except_self "Interview classic 150 questions/Arrar and string/product_of_array_except_self.cpp")
add_executable(gas_station "Interview classic 150 questions/Arrar and string/gas_station.cpp")
add_executable(candy "Interview classic 150 questions/Arrar and string/candy.cpp")
add_executable(trapping_rain_water "Interview classic 150 questions/Arrar and string/trapping_rain_water.cpp")
add_executable(roman_to_integer "Interview classic 150 questions/Arrar and string/roman_to_integer.cpp")
add_executable(integer_to_roman "Interview classic 150 questions/Arrar and string/integer_to_roman.cpp")
add_executable(length_of_last_word "Interview classic 150 questions/Arrar and string/length_of_last_word.cpp")
add_executable(longest_common_prefix "Interview classic 150 questions/Arrar and string/longest_common_prefix.cpp")
add_executable(reverse_words_in_a_string "Interview classic 150 questions/Arrar and string/reverse_words_in_a_string.cpp")
add_executable(Zigzag_conversion "Interview classic 150 questions/Arrar and string/Zigzag_conversion.cpp")
add_executable(find_the_index_of_the_first_occurrence_in_a_string "Interview classic 150 questions/Arrar and string/find_the_index_of_the_first_occurrence_in_a_string.cpp")
add_executable(valid_palindrome "Interview classic 150 questions/double pointer/valid_palindrome.cpp")
add_executable(is_subsequence "Interview classic 150 questions/double pointer/is_subsequence.cpp")
add_executable(two_sum_II_input_array_is_sorted "Interview classic 150 questions/double pointer/two_sum_II_input_array_is_sorted.cpp")
add_executable(container_with_most_water "Interview classic 150 questions/double pointer/container_with_most_water.cpp")
add_executable(3sum "Interview classic 150 questions/double pointer/3sum.cpp")
add_executable(minimum_size_subarray_sum "Interview classic 150 questions/sliding window/minimum_size_subarray_sum.cpp")
add_executable(longest_substring_without_repeating_characters "Interview classic 150 questions/sliding window/longest_substring_without_repeating_characters.cpp")
add_executable(ransom_note "Interview classic 150 questions/Hash table/ransom_note.cpp")
add_executable(isomorphic_strings "Interview classic 150 questions/Hash table/isomorphic_strings.cpp")
add_executable(word_pattern "Interview classic 150 questions/Hash table/word_pattern.cpp")
add_executable(valid_anagram "Interview classic 150 questions/Hash table/valid_anagram.cpp")
add_executable(group_anagram "Interview classic 150 questions/Hash table/group_anagrams.cpp")
add_executable(happy_number "Interview classic 150 questions/Hash table/happy_number.cpp")
add_executable(contains_duplicate_II "Interview classic 150 questions/Hash table/contains_duplicate_II.cpp")
add_executable(longest_consecutive_sequence "Interview classic 150 questions/Hash table/longest_consecutive_sequence.cpp")
add_executable(summary_ranges "Interview classic 150 questions/range/summary_ranges.cpp")
add_executable(merge_intervals "Interview classic 150 questions/range/merge_intervals.cpp")
add_executable(insert_interval "Interview classic 150 questions/range/insert_interval.cpp")
add_executable(minimum_number_of_arrows_to_burst_balloons "Interview classic 150 questions/range/minimum_number_of_arrows_to_burst_balloons.cpp")
add_executable(valid_parentheses "Interview classic 150 questions/stack/valid_parentheses.cpp")
add_executable(simplify_path "Interview classic 150 questions/stack/simplify_path.cpp")
add_executable(min_stack "Interview classic 150 questions/stack/min_stack.cpp")
add_executable(Evaluate_Reverse_Polish_Notation "Interview classic 150 questions/stack/Evaluate_Reverse_Polish_Notation.cpp")
add_executable(basic_calculator "Interview classic 150 questions/stack/basic_calculator.cpp")
add_executable(linked_list_cycle "Interview classic 150 questions/Linked list/linked_list_cycle.cpp")
add_executable(Merge_Two_Sorted_Lists "Interview classic 150 questions/Linked list/Merge_Two_Sorted_Lists.cpp")
add_executable(Copy_List_with_Random_Pointer "Interview classic 150 questions/Linked list/Copy_List_with_Random_Pointer.cpp")
add_executable(Reverse_Linked_List_II "Interview classic 150 questions/Linked list/Reverse_Linked_List_II.cpp")
add_executable(Remove_Nth_Node_From_End_of_List "Interview classic 150 questions/Linked list/Remove_Nth_Node_From_End_of_List.cpp")
add_executable(Remove_Duplicates_from_Sorted_List_II "Interview classic 150 questions/Linked list/Remove_Duplicates_from_Sorted_List_II.cpp")
add_executable(rotate_list "Interview classic 150 questions/Linked list/rotate_list.cpp")
add_executable(partition_list "Interview classic 150 questions/Linked list/partition_list.cpp")
add_executable(LRU_cache "Interview classic 150 questions/Linked list/LRU_cache.cpp")
add_executable(Maximum_Depth_of_Binary_Tree "Interview classic 150 questions/binary tree/Maximum_Depth_of_Binary_Tree.cpp")
add_executable(same_tree "Interview classic 150 questions/binary tree/same_tree.cpp")
add_executable(invert_binary_tree "Interview classic 150 questions/binary tree/invert_binary_tree.cpp")
add_executable(Symmetric_Tree "Interview classic 150 questions/binary tree/Symmetric_Tree.cpp")
add_executable(Construct_Binary_Tree_from_Preorder_and_Inorder_Traversal "Interview classic 150 questions/binary tree/Construct_Binary_Tree_from_Preorder_and_Inorder_Traversal.cpp")
add_executable(Construct_Binary_Tree_from_Inorder_and_Postorder_Traversal "Interview classic 150 questions/binary tree/Construct_Binary_Tree_from_Inorder_and_Postorder_Traversal.cpp")
add_executable(Populating_Next_Right_Pointers_in_Each_Node_II "Interview classic 150 questions/binary tree/Populating_Next_Right_Pointers_in_Each_Node_II.cpp")
add_executable(Flatten_Binary_Tree_to_Linked_List "Interview classic 150 questions/binary tree/Flatten_Binary_Tree_to_Linked_List.cpp")
add_executable(path_sum "Interview classic 150 questions/binary tree/path_sum.cpp")
add_executable(Sum_Root_to_Leaf_Numbers "Interview classic 150 questions/binary tree/Sum_Root_to_Leaf_Numbers.cpp")
add_executable(Binary_Search_Tree_Iterator "Interview classic 150 questions/binary tree/Binary_Search_Tree_Iterator.cpp")
add_executable(Count_Complete_Tree_Nodes "Interview classic 150 questions/binary tree/Count_Complete_Tree_Nodes.cpp")
add_executable(Lowest_Common_Ancestor_of_a_Binary_Tree "Interview classic 150 questions/binary tree/Lowest_Common_Ancestor_of_a_Binary_Tree.cpp")
add_executable(Binary_Tree_Right_Side_View "Interview classic 150 questions/Traversal of binary tree levels/Binary_Tree_Right_Side_View.cpp")
add_executable(Average_of_Levels_in_Binary_Tree "Interview classic 150 questions/Traversal of binary tree levels/Average_of_Levels_in_Binary_Tree.cpp")
add_executable(Binary_Tree_Level_Order_Traversal "Interview classic 150 questions/Traversal of binary tree levels/Binary_Tree_Level_Order_Traversal.cpp")